--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,13 @@
 
 <body>
     <h1>Welcome to the Blogging Website</h1>
+    <nav>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
 </body>
 
 </html>
