Github Pages nav bar fix

--- a/src/contact.html
+++ b/src/contact.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Blogging Website</title>
+    <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/contact.css">
 </head>
 
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
         <h1>Contact Us</h1>
         <p>Get in touch with us for any inquiries.</p>
     </header>
