--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <h1>Welcome to the Blogging Website</h1>
     <nav>
         <ul>
             <li><a href="home.html">Home</a></li>
@@ -17,6 +16,8 @@
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
+    <h1>Blogging Website</h1>
+    <p>Welcome to our website. We are a blogging platform where you can read and write articles.</p>
 </body>
 
 </html>
