--- a/src/home.html
+++ b/src/home.html
@@ -5,9 +5,17 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
     <h1>Welcome to My Blog</h1>
     <p>This is a sample blog post content. Stay tuned for more updates!</p>
 </body>
